# PSVRTracker

./: .codedocs  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat  InitialSetup_Win32.bat  InitialSetup_X64.bat  LICENSE  README.md
cmake/: Environment.cmake  FindSDL2.cmake  ThirdParty.cmake  Version.cmake
drivers/: README.txt
misc/research/: FocalLength.txt  (+1 more)
msvc/: PSVRTracker.sln
scripts/: BuildLibUSB_X64.bat  BuildSDL_X64.bat  DownloadAndUnzipOpenCV.bat
src/: CMakeLists.txt
src/psvrconfigtool/: App.cpp  App.h  AppStage.h  AppStage_AccelerometerCalibration.cpp  AppStage_AccelerometerCalibration.h  AppStage_ColorCalibration.cpp  AppStage_ColorCalibration.h  AppStage_ComputeTrackerPoses.cpp  AppStage_ComputeTrackerPoses.h  AppStage_ControllerSettings.cpp  AppStage_ControllerSettings.h  AppStage_HMDAccelerometerCalibration.cpp  AppStage_HMDAccelerometerCalibration.h  AppStage_HMDAccelerometerTest.cpp  AppStage_HMDAccelerometerTest.h  AppStage_HMDGyroscopeCalibration.cpp  AppStage_HMDGyroscopeCalibration.h  AppStage_HMDGyroscopeTest.cpp  AppStage_HMDGyroscopeTest.h  AppStage_HMDModelCalibration.cpp  AppStage_HMDModelCalibration.h  AppStage_HMDSettings.cpp  AppStage_HMDSettings.h  AppStage_HMDTrackingTest.cpp  AppStage_HMDTrackingTest.h  AppStage_MainMenu.cpp  AppStage_MainMenu.h  AppStage_MonoCalibration.cpp  AppStage_MonoCalibration.h  AppStage_StereoCalibration.cpp  AppStage_StereoCalibration.h  AppStage_TestTracker.cpp  AppStage_TestTracker.h  AppStage_TrackerSettings.cpp  AppStage_TrackerSettings.h  AppStage_TrackerTest.cpp  AppStage_TrackerTest.h  AppSubStage_CalibrateWithHMD.cpp  AppSubStage_CalibrateWithHMD.h  AppSubStage_CalibrateWithMat.cpp  (+11 more)
src/psvrconfigtool/source_assets/: rebuild_morpheus_model_header.bat
src/psvrservice/: CMakeLists.txt
src/psvrservice/ClientAPI/: CMakeLists.txt  ClientColor_CAPI.h  ClientConstants.h  ClientGeometry_CAPI.cpp  ClientGeometry_CAPI.h  PSVRClient.cpp  PSVRClient.h  PSVRClient_CAPI.cpp  PSVRClient_CAPI.h  PSVRClient_export.h
src/psvrservice/Device/Enumerator/: ControllerDeviceEnumerator.cpp  ControllerDeviceEnumerator.h  ControllerHidDeviceEnumerator.cpp  ControllerHidDeviceEnumerator.h  DeviceEnumerator.h  HMDDeviceEnumerator.cpp  HMDDeviceEnumerator.h  HMDHidDeviceEnumerator.cpp  HMDHidDeviceEnumerator.h  HMDUsbDeviceEnumerator.cpp  HMDUsbDeviceEnumerator.h  HidHMDDeviceEnumerator.cpp  TrackerDeviceEnumerator.cpp  TrackerDeviceEnumerator.h  TrackerUSBDeviceEnumerator.cpp  TrackerUSBDeviceEnumerator.h  VirtualHMDDeviceEnumerator.cpp  VirtualStereoCameraEnumerator.cpp  VirtualStereoCameraEnumerator.h  WMFCameraEnumerator.cpp  WMFCameraEnumerator.h  WMFStereoTracker.cpp  WMFStereoTracker.h
src/psvrservice/Device/Interface/: DeviceInterface.h  DevicePlatformInterface.h
src/psvrservice/Device/Manager/: ControllerManager.cpp  ControllerManager.h  DeviceManager.cpp  DeviceManager.h  DeviceTypeManager.cpp  DeviceTypeManager.h  HMDManager.cpp  HMDManager.h  TrackerManager.cpp  TrackerManager.h  USBDeviceManager.cpp  USBDeviceManager.h
src/psvrservice/Device/Model/: MonoPointCloudTrackingModel.cpp  MonoPointCloudTrackingModel.h  PointCloudTrackingModel.cpp  PointCloudTrackingModel.h  ShapeTrackingModelInterface.h  SphereTrackingModel.cpp  SphereTrackingModel.h  StereoPointCloudTrackingModel.cpp  StereoPointCloudTrackingModel.h  TrackingModelMath.cpp  TrackingModelMath.h
src/psvrservice/Device/USB/: LibUSBApi.cpp  LibUSBApi.h  LibUSBBulkTransferBundle.cpp  LibUSBBulkTransferBundle.h  LibUSBTransferBundle.cpp  LibUSBTransferBundle.h  NullUSBApi.cpp  NullUSBApi.h  USBApiInterface.h  USBDeviceFilter.cpp  USBDeviceFilter.h  USBDeviceInfo.h  USBDeviceRequest.h
src/psvrservice/Device/View/: ServerControllerView.cpp  ServerControllerView.h  ServerDeviceView.cpp  ServerDeviceView.h  ServerHMDView.cpp  ServerHMDView.h  ServerTrackerView.cpp  ServerTrackerView.h
src/psvrservice/DualShock4/: DualShock4Controller.cpp  DualShock4Controller.h
src/psvrservice/Filter/: CompoundPoseFilter.cpp  CompoundPoseFilter.h  KalmanOrientationFilter.cpp  KalmanOrientationFilter.h  KalmanPoseFilter.cpp  KalmanPoseFilter.h  KalmanPositionFilter.cpp  OrientationFilter.cpp  PoseFilterInterface.cpp  PoseFilterInterface.h  PositionFilter.cpp  PositionFilter.h
src/psvrservice/MorpheusHMD/: MorpheusHMD.cpp  MorpheusHMD.h
src/psvrservice/PSMoveController/: PSMoveController.cpp  PSMoveController.h
src/psvrservice/PSVRConfig/: PSVRConfig.cpp  PSVRConfig.h
src/psvrservice/PSVRTracker/: CommonTrackerConfig.cpp  CommonTrackerConfig.h  PS3EyeConfig.cpp  PS3EyeConfig.h  PS3EyeTracker.cpp  PS3EyeTracker.h  PS3EyeVideo.cpp  PS3EyeVideo.h  PS4CameraTracker.cpp  PS4CameraTracker.h  TrackerCapabilitiesConfig.cpp  TrackerCapabilitiesConfig.h  TrackerMath.cpp  TrackerMath.h
src/psvrservice/PSVRTracker/PSEye/: PSEyeVideoCapture.cpp
src/psvrservice/Platform/: BluetoothQueriesWin32.cpp  BluetoothRequests.cpp  BluetoothRequests.h  BluetoothRequestsWin32.cpp  PlatformDeviceAPIWin32.cpp  PlatformDeviceAPIWin32.h  WinUSBApi.cpp  WinUSBApi.h  WinUSBBulkTransferBundle.cpp  WinUSBBulkTransferBundle.h  WinUSBTransferBundle.cpp  WinUSBTransferBundle.h
src/psvrservice/Service/: PSVRService.cpp  PSVRService.h  PSVRServiceInterface.cpp  PSVRServiceInterface.h  ServiceRequestHandler.cpp  ServiceRequestHandler.h  ServiceVersion.h
src/psvrservice/Utils/: AlignedMemory.h  AtomicPrimitives.cpp  AtomicPrimitives.h  Logger.cpp  Logger.h  MathTypeConversion.cpp  MathTypeConversion.h  StackContainer.h  Utility.cpp  Utility.h  WorkerThread.cpp  WorkerThread.h
src/psvrservice/VirtualHMD/: VirtualHMD.cpp  VirtualHMD.h
src/psvrservice/VirtualStereoTracker/: VirtualStereoTracker.cpp  VirtualStereoTracker.h
src/psvrservice/WMFStereoTracker/: WMFStereoTracker.cpp  WMFStereoTracker.h
src/psvrservice/WMFTracker/: WMFConfig.cpp  WMFConfig.h  WMFMonoTracker.cpp  WMFMonoTracker.h  WMFStereoTracker.cpp  WMFStereoTracker.h  WMFVideo.cpp  WMFVideo.h
src/tests/: CMakeLists.txt  test_camera.cpp
(+31 files in other folders)
